--- a/faq.html
+++ b/faq.html
@@ -484,6 +484,7 @@ z-index: 11;
 <font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere & communities</font></a>
 <font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a>
 <font color="#aa8f8f"> | </font><a href="#numbers"><font color="#d8b6b6">about numbers</font></a>
+<font color="#aa8f8f"> | </font><a href="#snippets"><font color="#d8b6b6">my web code snippets</font></a>
 <font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a>
 <font color="#aa8f8f"> | </font><a href="#content"><font color="#d8b6b6">about my content</font></a>
 <font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a>
@@ -557,7 +558,7 @@ i like to use its name and variations as user in my "casual" accounts ! small an
 
 <a name="myself" id="myself"></a><br>
 <sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　who am i ?</font><br><br><br>
-<font color="#d8b9af">　( april . 19 . 2018 + may . 04 . 2018 )</font>
+<font color="#d8b9af">　( april . 19 . 2018 + september . 08 . 2021 )</font>
 <br><br>
 <font color="#B1A69E">
 　　　　　<font color="#91816b">𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈</font> ..<br>
@@ -586,12 +587,12 @@ i like to use its name and variations as user in my "casual" accounts ! small an
 <b>edit //</b> some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ...<br>
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
 <br>
-<sub>🖇</sub>　my height is 167cm ( 5'5 ft ). i am medium sized.<br>
-<sub>🖇</sub>　i weight 51kg ( 112 lbs ). i'm okay, i think i'm skinny.<br>
+<sub>🖇</sub>　my height is 168cm ( 5'6 ft ). i am medium sized.<br>
+<sub>🖇</sub>　i weight 51kg ( 112 lbs ) .<br>
 <sub>🖇</sub>　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
 <sub>🖇</sub>　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
 <sub>🖇</sub>　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
-<sub>🖇</sub>　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable.<br>
+<sub>🖇</sub>　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable. as of september 2021 , my hair is hip length ( and i will keep trimming it to keep it like that ) .<br>
 <sub>🖇</sub>　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
 <sub>🖇</sub>　i don't know my shoe size to be honest, but my feet are 24cm.<br>
 <sub>🖇</sub>　um... i'm a-cup <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
@@ -1607,6 +1608,89 @@ is it really healthy and safe for you, right now ?<br>
 </font>
 
 
+<a name="snippets" id="snippets"></a><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　why do i use web code snippets to modify social media sites ?</font><br><br><br>
+<font color="#d8b9af">　( january . 31 . 2022 )</font>
+<br><br>
+<font color="#B1A69E">
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">i have realized that some of my digital projects were being neglected by me because of how uncomfortable i feel when using social media, to share that content and reach people.
+the simpler solution would be, of course, deleting my accounts and posting on a place where i feel happier - but that place still doesn’t exist, and while i don’t make one, i have to solve that issue as much as i can so i can keep going !
+
+you might know that i have been using code snippets for the longest time to cutify some websites ( such as changing colors, background patterns, fonts.. ) but i have only recently thought of using them for more than only aesthetics.
+i realized that seeing the metric numbers ( such as following count, likes, and sometimes even comments ) were being very stressful and unmotivating for me, for many reasons that i have been talking endlessly about through all these years..
+so, as experimentation, i removed all the metrics. all of them.
+not only numbers, but also public comments, because i’m tired of seeing unwanted drama everywhere, people fighting on comments, and other things that have nothing to do with the content, that just annoys me to no end ..
+if i feel safe enough to see comments on a specific account, from a friend for example, i can simply deactivate the script for that moment !
+i can still like posts normally, comment on them, and check my own notifications so i can respond to people and see who responded me, so it haven’t negatively affected my usability on these platforms.
+
+i made scripts for all the social media sites that i am currently using.
+each one of them has a slightly different appearance ( i customized them very spontaneously ) , but all of them have the metric numbers and public comments hidden, and some other things as well ( such as trending posts ) .
+i will keep my web code snippets updated whenever needed, and you can always check the latest version on my /portfolio page !
+
+keep in mind that these codes were made by me, thinking on my own needs, and i am sharing it with you fluffies exactly as i use them.
+you are free to use them as you personally like, and modify according to your preferences. if you have some practice with css it should be enough for changing colors, images, or removing some stuff i did. feel free to experiment around !!
+
+i wish i could be more of an active help to others, at least when it comes to my own accounts, but sadly i have no much of an option .. i can only sometimes choose to hide a few numbers, but usually i can't.
+i have to insert javascript into websites for achieving that simple goal by myself, and so i am sharing them with you, in hopes to help in some way.
+
+the reality is that we have no control over our personal information on these platforms ( yes i do consider numbers something very personal, as it is clearly used for judging our "success" and "relevance" ) .
+on instagram, a few interaction numbers are hidden by standard ( at least for me ) but not the following count, while on youtube you can hide the subscriptions, but not any other numbers.
+tumblr gives options to hide both followers & notes - but only on your own blog, not on the tumblr site or app.
+twitter won't let you hide anything.
+it really really bothers me, deeply, so i look forward to more ways to hide all the unnecessarily stressing numbers from everyone, not only those who use my scripts, but i don't keep my hopes up ..
+
+i don't think those platforms care, at all, about people's mental health. hiding numbers would lead people to stop getting addicted to using social media for getting validation, and that means less money to them, right ?
+
+that's why i will work in solutions for this issue, by making my own safe spaces, that i can share with you fluffies <font color="#d3a5a5" style="font-size:11px;">♡</font>
+for now, i think those scripts are being a big help for me, and i hope they can help you as well .. at least a little bit
+
+but of course : inserting codes to hide some things, besides being a very useful tool, it's only a temporary solution for the real problem .. better saying, i am coping, not actually improving platforms for everyone.
+sadly, deep down, i know that people are still able to see all the numbers, and will judge me based on them just as much as the next person.
+that, itself, is a bit unmotivating.. i also can't run away from all the bothering posts that get suggested for me, weird dms from strangers, or avoid platforms to stop my posts from reaching more people because it's not "trending".
+
+nonetheless, keeping myself away from looking to numbers all the time is absolutely refreshing, and is doing wonders to my mental health !!
+sometimes i would feel so sad about social media, that i would just avoid it for the longest time, but i must always come back because i need those platforms to reach people & grow my community ( at least for now, hopefully not in the future )
+
+using those scripts + cutifying the pages certainly work very well, not only for coping, but for healing as well.
+i might never be able to feel 100% comfortable using social platforms, but i feel at least .. 40% more comfortable, and that is a lot, i must say !
+
+explaining in more detail : as an inactive user, just looking around and visiting people’s accounts, i would say that the experience is heavily improved by the removal of mentioned problematic aspects of platform websites.
+i feel okay, specially on tumblr & youtube, because their recommendations are highly advertised by content you explicitly interacted with + you can easily avoid the advertised posts with paid subscriptions ; which makes the experience of using them more enjoyable than other platforms !
+but, as an active user / content creator, the experience is just half improved by the scripts, and no platforms fill my needs properly..
+all posts has to be painfully adapted to each platform particularities ( which really takes away my possibilities as a creator ) , i miss a lot of necessary features, and am constantly unhappy with the way platforms treats me, with how random strangers are able to treat me .. i feel unsafe.
+
+yes, i can't possibly avoid all the issues unless i stop using these platforms as a whole, but i can avoid myself from getting upset about many things on a daily basis - i have to make an effort to think about the issues that numbers cause, instead of being reminded of them all the time.
+this is good enough for now, i’m proud of my efforts for the time being !!
+
+i will keep trying my best to create content for now, even with all limitations, because i need these social platforms for reaching people and keeping contact with the poofties community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can.
+once i can release my puf café project, finish working on my discord server and the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+well, it's always easier said than done : don't compare your growth to other peoples', don't pay attention to numbers, don't keep reading rude words, don't get involved in drama .. of course you shouldn't do any of that, but it's too hard to avoid when it's all over the place !!
+i noticed just how much i used to compare myself to other people and getting randomly upset with random drama that have nothing to do with me, when i stopped being able to do that. if i can't see it, i don't know it exist.
+it is completely different avoiding getting informed about important things that are happening, and just avoiding unnecessary stress and ridiculous drama. please allow yourself to be free from that !
+
+using "not only cuter but also improved" platforms this past month has made my experience with them a lot less heavy. now i open my feed and i don't feel disgusted, yay !
+do i feel happy though ? sometimes, yes, i like checking on my friends, people who i admire, as well as cute & comforting content, which inspires me a lot and keeps me motivated. i also get kind messages that make me smile so much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+but as i mentioned above, deep down i still know there is lots of ugly stuff going on .. i just often don't know exactly what it is, or how ugly it is, giving my efforts into avoiding it.
+
+i don't want to be part of this, and help those ugly platforms grow stronger. that's why i will stick to the plan, and never give up !!
+it is a big and very complicated project, but i believe in my dreams.
+i somehow made an online game, and that's because bubu, my loved ones, you fluffies, are giving me all the support in the world !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+so i must work hard for us all, to have our very deserved comfort spaces, because it is never too much to ask for !
+
+
+okay, but.. how to apply these web code snippets ?
+there are multiple ways of inserting javascript into a website, but i will tell you how i personally prefer to do it :
+
+<sub>📍</sub> on my <b>pc</b>, i use the opera browser, and there we can use chrome extensions, so i use the “web code injector” one. i tested multiple things, including inserting the code directly on the “inspect element” settings, but that extension is the most reliable way to insert the codes automatically to websites so far ( and it’s very easy to use too ) .
+
+<sub>📍</sub> on my <b>android</b> phone, i use the kiwi browser, and there we can use chrome extensions, so i also use the “web code injector” one, and it works perfectly just as on pc. keep in mind that the youtube code only works on the “desktop view” of the site, but the other codes work okay on the mobile versions too. my tip is : use your phone horizontally when on youtube, and you will simply get used to it.
+
+<sub>📍</sub> on my <b>ipad</b>, i use the safari browser, and i use the “snippets” app for inserting the codes manually on each website, as i enter them. it works pretty similarly to the “shortcuts” app ( it was freezing my ipad because the codes are too big, so i just downloaded the “snippets” as an alternative ) . you have to click on the “share” symbol on safari and then on the “inject snippet” button so you can insert the code on each website, after opening them. sadly, i found no automatic way to do that on ios .. so my tip is : have a clean profile saved on bookmarks so you won’t risk seeing “unwanted” content once entering websites, before applying your code !
+</pre><br><br><br><br><br><br>
+</font>
+
+
 <a name="words" id="words"></a><br>
 <sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　why do i use the word "lσlι" ?</font><br><br><br>
 <font color="#d8b9af">　( august . 24 . 2017 )</font>
@@ -1983,17 +2067,19 @@ another thing that i think is very important is combing your hair with a wide wo
 <br>
 　　<sub>💓</sub> makeup :<br>
 um i almost don't wear makeup, so i surely don't have much experience to talk about it. i don't like to wear makeup because i feel my skin very weird.. i only use it on special occasions, even though it is always very light. i think wearing just a little makeup helps my skin stay healthy, anyway. it doesn't like many products.<br>
-i don't like wearing base or concealer, i just have bb cream in case there is something wrong that i want to cover.. usually there is nothing, i don't have so dark circles, i'm used to it, so i just let it be.<br>
-in my eyes my biggest problem is my eyelashes, you must have realized that they are very straight. i don't like that, so it's common for me to use eyelash curler and transparent mascara, just to keep them in place. i have brown eye pencils and eyeshadow for sometimes delineating, i like to keep it as natural as possible.<br>
+i don't like wearing base or concealer, i just have bb cream in case there is something wrong that i want to cover.. usually there is nothing besides dark circles, and i'm used to it, so i just let it be.<br>
+in my eyes my biggest problem is my eyelashes, you must have realized that they are very straight. i don't like that, so it's common for me to use eyelash curler and brown mascara with a very thin brush, just to keep them in place. i have brown eye pencils for sometimes delineating, i like to keep it as natural as possible.<br>
 i don't do anything with my eyebrows, i don't really bother with them all natural.<br>
-i don't like bronzer, but i really like blush, i like it a lot. i also like highlighter, but i use it wisely ( i try ). i always get inspired in igari makeup and i struggle not to use too much blush and look like sunburned ; ;<br>
-on my lips i always moisturize constantly with natural oils ( my lips get dry often i hate it ), but i am truly an eternal lover of lip gloss and lip balm. i don't like lipsticks, though. i like to have my lips super moisturized and shiny, but not colored.<br>
+i don't like bronzer, but i really like blush, i like it a lot, especially cream brush ! i also like highlighter, but i use it wisely ( i try ). i always get inspired in igari makeup and i struggle not to use too much blush and look like sunburned ; ;<br>
+on my lips i always moisturize constantly with natural oils ( my lips get dry often i hate it ), but i am truly an eternal lover of lip gloss and lip balm. i don't like lipsticks, though. i like to have my lips super moisturized and shiny, but not very colored.<br>
 umm and sometimes i add a little tiny bit of white glitter on my cheeks, lips or eyelids ! i think it's very cute.<br>
+for sealing the makeup, if i’m outside for long periods of time, i like using a tiny bit of moisturizing translucent powder. it looks natural, and also feels more comfortable on my skin.<br>
 <br>
 　　<sub>💓</sub> nails :<br>
 i'm also not experienced with nail art, but i'll talk about my nails anyway. i think there are not many secrets to getting your nails healthy, i think proper nutrition and hydration are the most important thing. my nails grow very fast, just like my hair, i can't really tell the reasons because it was always like this.. but i can say i always keep them super moisturized with natural oils ( the same ones i use for the skin ), i moisturize them multiple times a day, whenever i wash my hands. it's very important to always keep your nails clean and moisturized, so i never forget the baby wipes and the moisturizer when i'm outside !<br>
 i always cut the cuticles ( not too much, just the excess ) and keep them clean. i used to paint my nails often and did nail art on them, but i stopped doing it because i just don't feel interested anymore. people always say that keeping nails painted is important to keep them strong but i can confirm that this is a myth, at least partially. when i always painted my nails and one day i didn't they were really weak, it's true ; but this is because they were already damaged by the use of nail polish. when i stopped using nail polish frequently, after a few months they became stronger, beautiful and healthier than ever before ! in this case, it depends on whether you want to use polish frequently or not.<br>
 i usually keep my nails very short and oval shape, but when i'm in the mood i let them a little longer and almond shape.<br>
+what is most important for me to keep healthy nails is to always cut my cuticles ( so i don't pick on my skin when i'm anxious ) , as well as to file and hydrate frequently, so they stay shiny & cute at all times !<br>
 <br>
 　　<sub>💓</sub> tl ; dr :<br>
 if you always stay clean, moisturized and hydrated you will always be healthy and flawless from the beginning until the end of the day, which will definitely make your life a lot better !!<br>
