--- a/fashion.html
+++ b/fashion.html
@@ -620,6 +620,8 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/6.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/07.png"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/08.jpg"/><br><br>
@@ -629,6 +631,8 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/011.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/11.jpg"/><br><br>
 <br>
