--- a/gaming.html
+++ b/gaming.html
@@ -713,7 +713,7 @@ cutest baby there is.<br>
 　　　invitation codes : 2 left<br><br><br>
 
 <div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
-<iframe id="frame" src="/pupe/14" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
+<iframe id="frame" src="/pupe/15" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
 </div>
 </font>
 
@@ -723,7 +723,7 @@ cutest baby there is.<br>
 <font color="#a8958d">　<b>transformice</b><br>
 　　　community : international<br><br><br>
 
-<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 180px; line-height:10px; padding:5px;">
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 220px; line-height:10px; padding:5px;">
 <img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/1wEj8uk.png">
 
         <script type = "text/javascript">
@@ -743,15 +743,16 @@ cutest baby there is.<br>
 
 <font color="#a37c81" style="position:absolute; left:115px; top:3px; font-size:8px;">
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
-　<font color="#b89196">level :</font> 52<br>
+　<font color="#b89196">level :</font> 54<br>
 　<font color="#b89196">fav mode :</font> normal<br>
-　<font color="#b89196">fav title :</font> fiancée<br>
-　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
+　<font color="#b89196">fav title :</font> snowdrop<br>
+　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="30px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
 <br></font>
  ‌ <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/6QZYFsf.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
-　<font color="#b89196">spiritual guide [24]</font><br>
-　<font color="#b89196" style="line-height:5px;">wind master [25]<br><br></font>
-　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="50px" src="https://i.imgur.com/sqZme20.png"></sub><br></font>
+　<font color="#b89196">spiritual guide [26]</font><br>
+　<font color="#b89196">wind master [26]</font><br>
+　<font color="#b89196" style="line-height:5px;">physicist [01]<br><br></font>
+　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="70px" src="https://i.imgur.com/q8leahH.png"></sub><br></font>
 
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
 　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
