--- a/links.html
+++ b/links.html
@@ -458,18 +458,18 @@ z-index: 3;
 <font color="#b89c9f">
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> ‌ my casual accs :</font><div style="line-height:3px;"><br>
 <br></div>
- ‌  ‌‌ <font color="#7a6b6b">tmblr : </font><a id="ooo" title="aesthetic blog" href="https://pooftie.me" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="comfort acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">tmblr : </font><a id="ooo" title="photo blog" href="https://pooftie.me" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="ascii art acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
  ‌  ‌‌ <font color="#7a6b6b">insta : </font><a id="ooo" title="self care acc" href="https://instagr.am/pooftie" target="_blank" >pooftie</a><br>
  ‌  ‌‌ <font color="#7a6b6b">yt : </font><a id="ooo" title="playlist ch" href="https://youtube.com/pooftie" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo" title="gaming community" href="https://s.team/u/pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo" title="gaming profile" href="https://s.team/u/pooftie" target="_blank" >pooftie</a><br>
  ‌  ‌‌ <font color="#7a6b6b">line : </font><a id="ooo" title="chat app" href="https://line.me/ti/p/~pooftie" target="_blank" >pooftie</a><br>
  ‌  ‌‌ <font color="#7a6b6b">dsc : </font><a id="ooo" title="add server" href="https://dsc.gg/pooftie" target="_blank" >pooftie</a><font color="#cfb8ba" style="font-size:8px;">#1997</font><br>
 <br>
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> ‌ my dev accs :</font><div style="line-height:3px;"><br>
 <br></div>
- ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/" target="_blank" >middlepot</a><br>
  ‌  ‌‌ <font color="#7a6b6b">github : </font><a id="ooo" title="web platform" href="https://github.com/middlepot" target="_blank" >middlepot</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/" target="_blank" >middlepot</a><br>
  ‌  ‌‌ <font color="#7a6b6b">apple : </font><a id="ooo" title="ios platform" href="https://apps.apple.com/developer/id1591751958" target="_blank" >middlepot</a><br>
  ‌  ‌‌ <font color="#7a6b6b">play : </font><a id="ooo" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >middlepot</a><br>
 <br>
