--- a/portfolio.html
+++ b/portfolio.html
@@ -467,12 +467,12 @@ z-index: 3;
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
-<a href="https://1997.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/INDlrdR.gif"></a><br><br>
-<a href="https://shybunny.middlepot.com" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
-<a href="https://pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"></a><br><br>
-<a href="https://2006.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
-<a href="https://utf8.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/qyIhmW6.png"></a><br><br>
-<a href="https://ch.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
+<a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/INDlrdR.gif"></a><br><br>
+<a href="https://shybunny.middlepot.com" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
+<a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/f0mz3xF.png"></a><br><br>
+<a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
+<a href="https://utf8.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/qyIhmW6.png"></a><br><br>
+<a href="https://ch.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -480,13 +480,13 @@ z-index: 3;
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ needle felting ..<br><br></font><br><br>
-　<img width="auto" height="250px" src="https://i.imgur.com/JUJ6rgu.jpg"><br><br>
-　<img width="auto" height="250px" src="https://i.imgur.com/WOx9j1W.png">　
-<img width="auto" height="250px" src="https://i.imgur.com/HnO6VtX.png"><br><br>
-<img width="auto" height="150px" src="https://i.imgur.com/vlSTDfe.png">　
-<img width="auto" height="150px" src="https://i.imgur.com/qunDIJU.png"><br><br>
-<img width="auto" height="250px" src="https://i.imgur.com/JsN6EKu.png">　
-<img width="auto" height="250px" src="https://i.imgur.com/C3Jv1i8.png">
+　<img width="auto" height="300px" src="https://i.imgur.com/JUJ6rgu.jpg"><br><br>
+　<img width="auto" height="280px" src="https://i.imgur.com/WOx9j1W.png">　
+<img width="auto" height="280px" src="https://i.imgur.com/HnO6VtX.png"><br><br>
+<img width="auto" height="170px" src="https://i.imgur.com/vlSTDfe.png">　
+<img width="auto" height="170px" src="https://i.imgur.com/qunDIJU.png"><br><br>
+<img width="auto" height="280px" src="https://i.imgur.com/JsN6EKu.png">　
+<img width="auto" height="280px" src="https://i.imgur.com/C3Jv1i8.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -704,9 +704,9 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ collaging ..<br><br>
 <br>
-<img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
-<img width="350px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
-<img width="175px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="175px" height="auto" src="https://i.imgur.com/QApSfkU.png">
+<img width="400px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
+<img width="190px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="190px" height="auto" src="https://i.imgur.com/QApSfkU.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -714,12 +714,13 @@ function resetPlayer() {
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ sewing ..<br><br></font><br><br>
-<img width="auto" height="350px" src="https://i.imgur.com/wcIcph5.jpg"><br><br>
-<img width="auto" height="250px" src="https://i.imgur.com/H8KNakm.png"><br><br>
-　<img width="auto" height="200px" src="https://i.imgur.com/40yJb4m.png">
-<img width="auto" height="200px" src="https://i.imgur.com/KyF2u47.png"><br><br>
-<img width="auto" height="300px" src="https://i.imgur.com/jJRmZou.jpg"/>
-<img width="auto" height="300px" src="https://i.imgur.com/YO0l42M.jpg"/><br><br>
+<img width="320px" height="auto" src="https://i.imgur.com/rbrkEHH.jpg"><br><br>
+<img width="320px" height="auto" src="https://i.imgur.com/ep4ENU6.jpg"><br><br>
+<img width="320px" height="auto" src="https://i.imgur.com/l6QyZw0.jpg"><br><br>
+<img width="320px" height="auto" src="https://i.imgur.com/9pKl1Er.jpg"><br><br>
+<img width="320px" height="auto" src="https://i.imgur.com/2UHIKxH.jpg"><br><br>
+<img width="auto" height="280px" src="https://i.imgur.com/laqU3ts.jpg">
+<img width="auto" height="280px" src="https://i.imgur.com/Ynd8fVf.jpg"><br><br>
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -728,9 +729,10 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ ascii art ..<br><br>
 <br><br>
+<img src="https://i.imgur.com/Bs43TLX.png">
+<img src="https://i.imgur.com/gQcFKYn.png"><br><br>
 <img src="https://i.imgur.com/QgQSreB.png">
-<img src="https://i.imgur.com/gQcFKYn.png">
-<img src="https://i.imgur.com/Bs43TLX.png"><br><br>
+<img src="https://i.imgur.com/Vymk0Bi.png"><br><br>
 <img src="https://i.imgur.com/px7ebRm.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
@@ -1013,6 +1015,79 @@ function resetPlayer2() {
 <center>
 
 
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web code snippets ..<br><br></font>
+<font style="font-size: 8px;" color="#b38d94"><br>
+( click the screenshots to get the .txt files )
+</font>
+<br><br><br>
+<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/1dAjLlp.png"/></a>
+        <script type = "text/javascript">
+            var imagetmblr = document.getElementById("tmblr");
+            var currentPostmblr = 0;
+            var imagestmblr = ["https://i.imgur.com/1dAjLlp.png", "https://i.imgur.com/tLhKiY4.png"]
+
+            function volgendefototmblr() {
+                if (++currentPostmblr >= imagestmblr.length)
+                    currentPostmblr = 0;
+
+                imagetmblr.src = imagestmblr[currentPostmblr];
+            }
+
+            setInterval(volgendefototmblr, 1000);
+        </script><br><br><br>
+
+<a href="https://file.pooftie.me/js/yt.txt" target="_blank" id="linkzinhoinho"><img id="yt" width="400px" height="auto" src="https://i.imgur.com/RJNCZse.png"/></a>
+        <script type = "text/javascript">
+            var imageyt = document.getElementById("yt");
+            var currentPosyt = 0;
+            var imagesyt = ["https://i.imgur.com/RJNCZse.png", "https://i.imgur.com/Jg4RG81.png"]
+
+            function volgendefotoyt() {
+                if (++currentPosyt >= imagesyt.length)
+                    currentPosyt = 0;
+
+                imageyt.src = imagesyt[currentPosyt];
+            }
+
+            setInterval(volgendefotoyt, 1000);
+        </script><br><br><br>
+
+<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/RjowAzo.png"/></a>
+        <script type = "text/javascript">
+            var imagetwt = document.getElementById("twt");
+            var currentPostwt = 0;
+            var imagestwt = ["https://i.imgur.com/W8DM4St.png", "https://i.imgur.com/umDjhKa.png"]
+
+            function volgendefototwt() {
+                if (++currentPostwt >= imagestwt.length)
+                    currentPostwt = 0;
+
+                imagetwt.src = imagestwt[currentPostwt];
+            }
+
+            setInterval(volgendefototwt, 1000);
+        </script><br><br><br>
+
+<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/RjowAzo.png"/></a>
+        <script type = "text/javascript">
+            var imageig = document.getElementById("ig");
+            var currentPosig = 0;
+            var imagesig = ["https://i.imgur.com/RjowAzo.png", "https://i.imgur.com/FFMUUJl.png"]
+
+            function volgendefotoig() {
+                if (++currentPosig >= imagesig.length)
+                    currentPosig = 0;
+
+                imageig.src = imagesig[currentPosig];
+            }
+
+            setInterval(volgendefotoig, 1000);
+        </script><br><br><br>
+
+<br><br><br><br>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
+<center>
+
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ 3D modeling ..<br><br>
 <font style="font-size: 8px;" color="#b38d94"><br>
@@ -1042,6 +1117,7 @@ function resetPlayer2() {
 
 
 
+
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ pc & mobile customization ..<br><br></font><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/6UuQT8F.gif"><br><br>
@@ -1051,7 +1127,7 @@ function resetPlayer2() {
 <img width="auto" height="350px" src="https://i.imgur.com/eK2OD8Z.jpg">　
 <img width="auto" height="350px" src="https://i.imgur.com/xSkS9RH.png">
 <br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
 <br><br>
