--- a/recommended.html
+++ b/recommended.html
@@ -470,7 +470,7 @@ z-index: 3;
 <br><br><br>
 
 　<a href="http://theprincesschateau.silentears.net" target="_blank"><img src="https://i.imgur.com/58xmjAn.gif"></a>
-　‌‌<a href="https://luupon.carrd.co" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>
+　‌‌<a href="https://luupon.art" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>
 　<a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 
 　　‌‌<br><br>　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
