--- a/portfolio.html
+++ b/portfolio.html
@@ -764,7 +764,7 @@ function resetPlayer() {
 <br>
 <a href="https://ameblo.jp/jyohanna/" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/3tWbz7w.png"></a><br><br>
 <a href="https://dollbabyheart.wixsite.com/babydollsketchbook" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/Lix7UYX.png"></a><br><br>
-<a href="https://luupon.art" target="_blank"><img id="mine" width="430px" height="auto" src="https://i.imgur.com/BoX5z8r.gif"/></a>
+<a href="https://luupon.art" target="_blank"><img id="mine" width="430px" height="auto" src="https://i.imgur.com/QF1zJgt.png"/></a>
         <script type = "text/javascript">
             var image1 = document.getElementById("mine");
             var currentPos1 = 0;
